@@ -66,6 +66,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Support for Hebrew numerals in dates and times
 * (bug 11315) Signatures can be configured in [[MediaWiki:Signature]] and [[MediaWiki:Signature-ip]]
 * Signatures for anonymous users link to Special:Contributions page rather than user page
+* Added --override switch for disabled pages in updateSpecialPages.php
 
 === Bug fixes in 1.12 ===
 
